XP.css now provided by the server itself

--- a/static/pages/about/people/valvex.html
+++ b/static/pages/about/people/valvex.html
@@ -4,7 +4,7 @@
         <title>valvex</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
+        href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/assets/css/index.css">
 
     </head>
