--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
         <title>Old-Games Inc</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
+        href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/static/assets/css/index.css">
         <script src="/static/assets/js/hrefbutton.js" defer></script>
         <script src="/static/assets/js/countdown_that_i_pasted_from_w3schools.js" defer></script>
@@ -20,9 +20,9 @@
                 <h3>index</h3>
                 <nav>
                     <button aria-label="./index.html" class="href-btn href-btn-disabled" disabled="true">index</button>
-                    <button aria-label="/static/pages/downloads" class="href-btn">downloads</button>
-                    <button aria-label="/static/pages/about" class="href-btn">about</button>
-                    <button aria-label="/static/pages/help" class="href-btn">need help?</button>
+                    <button aria-label="/psdsads" class="href-btn">downloads</button>
+                    <button aria-label="/static/pages/about/index.html" class="href-btn">about</button>
+                    <button aria-label="/static/pages/help/index.html" class="href-btn">need help?</button>
                 </nav>
                 
             </div>
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="window-body">
-                    <p>please read our copyright <a href="/static/pages/copyright/">here</a></p>
+                    <p>please read our copyright <a href="/static/pages/copyright/index.html">here</a></p>
                     <p>this site is still in beta</p>
                 </div>
                 </div>
