--- a/static/pages/about/index.html
+++ b/static/pages/about/index.html
@@ -4,7 +4,7 @@
         <title>Old-Games Inc</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
+        href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/assets/css/index.css">
         <link rel="stylesheet" href="/assets/css/about.css">
         <script src="/assets/js/hrefbutton.js" defer></script>
