--- a/static/pages/about/people/veizu.html
+++ b/static/pages/about/people/veizu.html
@@ -4,7 +4,7 @@
         <title>enorsu</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
+        href="/static/assets/css/XP.css">
         <link rel="stylesheet" href="/assets/css/index.css">
 
     </head>
