--- a/static/pages/help/index.html
+++ b/static/pages/help/index.html
@@ -4,11 +4,11 @@
         <title>Old-Games Inc</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
-        <link rel="stylesheet" href="/assets/css/index.css">
-        <link rel="stylesheet" href="/assets/css/about.css">
-        <script src="/assets/js/hrefbutton.js" defer></script>
-        <script src="/assets/js/about_me_buttons.js" defer></script>
+        href="/static/assets/css/XP.css">
+        <link rel="stylesheet" href="/static/assets/css/index.css">
+        <link rel="stylesheet" href="/static/assets/css/about.css">
+        <script src="/static/assets/js/hrefbutton.js" defer></script>
+        <script src="/static/assets/js/about_me_buttons.js" defer></script>
 
     </head>
     <body>
@@ -16,7 +16,7 @@
             <h1>Old-Games Inc</h1>
             <h3>support page</h3>
             <nav>
-                <button aria-label="/index.html" class="href-btn">back to index</button>
+                <button aria-label="/static/index.html" class="href-btn">back to index</button>
             </nav>
         </div>
         <br>
