--- a/static/pages/shark/index.html
+++ b/static/pages/shark/index.html
@@ -4,16 +4,16 @@
         <title>Old-Games Inc</title>
         <link
         rel="stylesheet"
-        href="https://unpkg.com/xp.css">
-        <link rel="stylesheet" href="/assets/css/index.css">
+        href="/static/assets/css/XP.css">
+        <link rel="stylesheet" href="/static/assets/css/index.css">
         <link rel="stylesheet" href="/assets/css/about.css">
-        <script src="/assets/js/hrefbutton.js" defer></script>
-        <script src="/assets/js/about_me_buttons.js" defer></script>
+        <script src="/static/assets/js/hrefbutton.js" defer></script>
+        <script src="/static/assets/js/about_me_buttons.js" defer></script>
 
     </head>
     <body>
         <div class="main">
-            <img src="/assets/misc/shark.jpg">
+            <img src="/static/assets/misc/shark.jpg">
         </div>
     </body>
 </html>
