--- a/static/pages/about/index.html
+++ b/static/pages/about/index.html
@@ -5,10 +5,10 @@
         <link
         rel="stylesheet"
         href="/static/assets/css/XP.css">
-        <link rel="stylesheet" href="/assets/css/index.css">
-        <link rel="stylesheet" href="/assets/css/about.css">
-        <script src="/assets/js/hrefbutton.js" defer></script>
-        <script src="/assets/js/about_me_buttons.js" defer></script>
+        <link rel="stylesheet" href="/static/assets/css/index.css">
+        <link rel="stylesheet" href="/static/assets/css/about.css">
+        <script src="/static/assets/js/hrefbutton.js" defer></script>
+        <script src="/static/assets/js/about_me_buttons.js" defer></script>
 
         <script>
   function resizeIframe(obj) {
@@ -23,7 +23,7 @@
             <h1>Old-Games Inc</h1>
             <h3>about us</h3>
             <nav>
-                <button aria-label="/index.html" class="href-btn">back to index</button>
+                <button aria-label="/static/index.html" class="href-btn">back to index</button>
             </nav>
         </div>
         <br>
