requirements and more

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
                 <h3>index</h3>
                 <nav>
                     <button aria-label="./index.html" class="href-btn href-btn-disabled" disabled="true">index</button>
-                    <button aria-label="/psdsads" class="href-btn">downloads</button>
+                    <button aria-label="/pages/downloads" class="href-btn">downloads</button>
                     <button aria-label="/static/pages/about/index.html" class="href-btn">about</button>
                     <button aria-label="/static/pages/help/index.html" class="href-btn">need help?</button>
                 </nav>
